@@ -1,6 +1,14 @@
 2009-09-05  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/controller.c
+	* src/lastfm-ws.[ch]
+	* src/scrobbler.c
+	* src/uimisc.c:
+	Make LastfmWsSession a VglObject
+
+2009-09-05  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/controller.c
 	* src/lastfm-ws.c
 	* src/scrobbler.c
 	* src/userconfig.c
